--- a/SPOTYFOM/.vscode/settings.json
+++ b/SPOTYFOM/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "C_Cpp.default.compilerPath": "C:\\MinGW\\bin\\gcc.exe",
     "files.associations": {
-        "bibliotecas.h": "c"
+        "bibliotecas.h": "c",
+        "INTERFACE.C": "cpp",
+        "curses.h": "c",
+        "menu.h": "c",
+        "interfaces.h": "c"
     }
 }
